<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/moviesFragment"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/tag_movies" />
        <item
            android:id="@+id/tvshowFragment"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tag_tv_shows" />
    </group>

    <item android:title="@string/favorite">
        <menu>
            <item
                android:id="@+id/favMoviesFragment"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/favorite_movie" />
            <item
                android:id="@+id/favTVShowFragment"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/favorite_tv_show" />

        </menu>
    </item>

    <item android:title="@string/search">
        <menu>
            <item
                android:id="@+id/searchMoviesFragment"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/favorite_movie" />
            <item
                android:id="@+id/searchTVShowFragment"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/favorite_tv_show" />

        </menu>
    </item>

</menu>
