<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/moviesFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.dicoding.intifada.submission5.fragment.MovieFragment"
        android:label="@string/tag_movies"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/tvshowFragment"
        android:name="com.dicoding.intifada.submission5.fragment.TvShowFragment"
        android:label="@string/tag_tv_shows"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/favMoviesFragment"
        android:name="com.dicoding.intifada.submission5.fragment.FavoriteMovieFragment"
        android:label="@string/favorite_movie"
        tools:layout="@layout/fragment_favorite_movie" />
    <fragment
        android:id="@+id/favTVShowFragment"
        android:name="com.dicoding.intifada.submission5.fragment.FavoriteTvShowFragment"
        android:label="@string/favorite_tv_show"
        tools:layout="@layout/fragment_favorite_tv_show" />

</navigation>